# openAV-Avtka

./: Makefile  Makefile_perf  README.md  demo.c  main.c  meson.build  perf_test.cpp
examples/dynamic_ui/: dynamic_ui.c
examples/lv2/: Makefile  amp.c  avtka_ui.c  common.h
examples/lv2/avtka_example.lv2/: avtka_example.ttl  manifest.ttl
examples/lv2_ui/: lv2_ui.c
include/: avtka.h
src/: avtka.c  avtka.h  avtka_item.c  avtka_ui.c  draw.c  draw_extra.c  draw_impl.h  impl.h  interact.c  item.c  meson.build  screen.c
src/pugl/: event.h  pugl.h  pugl_internal.h  pugl_x11.c
tests/: meson.build  perf_test.cpp  test_create.c
